Fixing double scroll

--- a/src/sections/ProcessList/styles.css
+++ b/src/sections/ProcessList/styles.css
@@ -4,10 +4,8 @@
   display: flex;
   flex-direction: column;
   flex: 2 1;
-  overflow-y: scroll;
 }
 
 .processList-tableWrapper {
   overflow-y: scroll;
 }
-
